--- a/requirements.txt
+++ b/requirements.txt
@@ -10,26 +10,5 @@ pyaudio
 pypdf
 streamlit
 tokenizers
-torchaudio==2.4.0
-sounddevice
-## OpenVoice requirements ##
-librosa
-faster-whisper
-pydub
-wavmark
-numpy
-eng_to_ipa
-inflect
-unidecode
-whisper-timestamped
-openai
-pypinyin
-cn2an
-jieba
-gradio
-langid
-PyPDF2
-wavio
-langchain_ollama.llms
-langgraph
-langchain_ollama
+torch==2.3.1
+torchaudio==2.3.1
