--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain
 langchain_core
 langchain_fireworks
 langchain_huggingface
+langchain_ollama
 langgraph
 fastapi
 sounddevice
@@ -12,4 +13,3 @@ streamlit
 tokenizers
 torch==2.3.1
 torchaudio==2.3.1
-wavio
