--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,17 @@ torch==2.3.1
 torchaudio==2.3.1
 wavio
 PyPDF2
+python-dotenv
+huggingface_hub
+langchain
+langchain_core
+langchain_fireworks
+langchain_huggingface
+langgraph
+fastapi
+pyaudio
+pypdf
+streamlit
+tokenizers
+torchaudio==2.4.0
+ 
