--- a/requirements.txt
+++ b/requirements.txt
@@ -4,28 +4,11 @@ langchain
 langchain_core
 langchain_fireworks
 langchain_huggingface
-langchain_ollama
 langgraph
 fastapi
-sounddevice
+pyaudio==0.2.14
 pypdf
 streamlit
 tokenizers
 torch==2.3.1
 torchaudio==2.3.1
-wavio
-PyPDF2
-python-dotenv
-huggingface_hub
-langchain
-langchain_core
-langchain_fireworks
-langchain_huggingface
-langgraph
-fastapi
-pyaudio
-pypdf
-streamlit
-tokenizers
-
- 
